# backend-py-ai-forex

./: .gitignore  Jenkinsfile  Makefile  README.md
services/backend-py-ai-forex/: .flake8  .isort.cfg  .mypy.ini  .swp  Makefile  grid_search_results.csv  main.py  pyproject.toml  start_ai_nowcasting.sh  variation_prediction.csv
services/backend-py-ai-forex/src/: app.py
services/backend-py-ai-forex/src/forex/: automatisation.py  binary_labels_creation.py  constants.dbk.py  constants.py  machine_learning.py  tests.py  util.py
services/backend-py-ai-forex/src/forex/data/: ML_Data_29un2022-dev.csv  ML_Data_29un2022-test.csv  ML_Data_29un2022-train+dev.csv  ML_Data_29un2022-train.csv  delay_macro.csv  macro_data-all_data_1.0.csv  macro_data-all_data_1.5.csv  macro_data-all_data_2.0.csv  macro_data-small_data.csv
services/backend-py-ai-forex/tests/: test_util.py
