[tool.poetry]
name = "backend-py-ai-nowcasting-forex"
version = "0.0.0"
description = ""
authors = ["Trading Central"]
packages = [
    { include = "src" }
]

#[[tool.poetry.source]]
#name = "tradingcentral"
#url = "https://package.tradingcentral.com/repository/pypi-all/simple/"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
scipy = "^1.8.1"
sklearn = "^0.0"
pandas = "^1.4.3"
scikit-learn = "^1.1.3"
panda = "^0.3.1"
pytplot = "^1.7.28"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
tqdm = "^4.64.1"
csvtool = "^0.2"
plotly = "^5.11.0"
mpl-interactions = "^0.22.1"

[tool.poetry.dev-dependencies]
black = "22.3.0"
coverage = "5.5"
flake8 = "3.9.2"
flake8-bugbear = "21.11.29"
isort = "5.10.1"
mypy = "0.790"
pre-commit = "2.19.0"
pylint = "2.13.9"
pytest = "6.2.5"
pytest-cov = "2.12.1"
safety = "1.10.3"
parameterized = "0.8.1"
mock = "4.0.3"

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | .mypy_cache
  | .pytest_cache
  | .dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
